# edda

./: .gitignore  .pre-commit-config.yaml  README.md  build.zig  build.zig.zon  hatch_build.py  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_vs_chroma.py
edda-mcp/: README.md  pyproject.toml
edda-mcp/src/edda_mcp/: server.py
example/: basic_usage.py  high_level_api.py  utils_test.py
examples/: 01_basic_search.py  02_persistence.py  03_numpy_integration.py  04_pydantic_ai.py  basic_search.py
python/edda/: __init__.py  _bindings.py  _common.py  _lib_loader.py  flat.py
python/tests/: test_smoke.py
src/: c_api.zig  flat.zig  hnsw.zig  index.zig  main.zig  metrics.zig  root.zig  types.zig
tests/: test_index_flat.py
