[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eddadb"
version = "0.1.1"
description = "Edda the Lightweight Vector Search Engine"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Dmitrii Gilemkhanov", email = "dima.rize@yandex.ru" },
]
dependencies = ["numpy"]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "prek>=0.3.8",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "ty>=0.0.29",
]
examples = ["pydantic-ai"]

[tool.uv.workspace]
members = ["edda-mcp"]

[tool.uv.sources]
edda-mcp = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["python/edda"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
