[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "pyedda"
version = "0.1.1"
description = "Edda - a lightweight vector search engine"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Dmitrii Gilemkhanov", email = "dima.rize@yandex.ru" },
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [ "numpy" ]

[dependency-groups]
dev = [
  "hatchling>=1.29",
  "prek>=0.3.8",
  "pytest>=9.0.2",
  "ruff>=0.15.9",
  "ty>=0.0.29",
]
bench = [
  "chromadb",
  "tabulate",
]
examples = [ "pydantic-ai" ]

[tool.hatch]
build.targets.wheel.packages = [ "python/edda" ]
build.targets.wheel.hooks.custom.path = "hatch_build.py"

[tool.uv]
sources.edda-mcp = { workspace = true }
workspace.members = [ "edda-mcp" ]

[tool.pytest]
ini_options.testpaths = [ "python/tests" ]
