[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edda-mcp"
version = "0.1.0"
description = "MCP server for Edda vector search engine"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "../LICENSE" }
authors = [
  { name = "Dmitrii Gilemkhanov", email = "dima.rize@yandex.ru" },
]
dependencies = [
  "edda",
  "fastmcp",
  "openai",
]

[project.scripts]
edda-mcp = "edda_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/edda_mcp"]
